<resources>
    <string name="app_name">社群联盟</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="prompt_user">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>

    <string name="no_network">网络连接不可用</string>
    <string name="error_network">网络连接错误</string>
    <string name="enter">确定</string>
    <string name="de_actionbar_system">系统消息</string>
    <string name="main_customer">意见反馈</string>
    <string name="de_actionbar_sub_defult">聊天</string>
    <string name="all_group_member">全体群员</string>
    <string name="search_message">查看聊天记录</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群名称</string>
    <string name="group_nickname">个人昵称</string>
    <string name="group_activity">群活动</string>
    <string name="group_announcement">群公告</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="group_code">群二维码</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="join_activity">参加</string>
    <string name="email">邮箱</string>
    <string name="message">消息</string>
    <string name="add">添加</string>
    <string name="group_my_name">群名称</string>
    <string name="no_group">您暂时没有加入任何群</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="ignore">忽略</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="no_data">没有相关数据！</string>
    <string name="start_audio">开始录音</string>
    <string name="end_audio">结束录音</string>
    <string name="speech_recognition">语音识别</string>
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="fetching">获取中……</string>
    <string name="location">位置</string>
    <string name="vote">投票</string>
    <string name="create">创建</string>
    <string name="group_vote">群投票</string>
    <string name="vote_title">投票标题</string>
    <string name="vote_time">投票时间</string>
    <string name="vote_status">投票状态</string>
    <string name="multiselect">允许多选</string>
    <string name="voting_period">投票期限</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="contact_notification_someone_agree_your_request">%1$s已同意你的好友请求</string>
    <string name="contact_notification_agree_your_request">对方已同意你的好友请求</string>

    <string-array name="spinners">
        <item>我的名字？</item>
        <item>我的手机号？</item>
    </string-array>

    <string name="recommend">推荐</string>
    <string name="recommend_code">推荐id</string>
</resources>
