<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.min.smalltalk.wedget.image.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/default_portrait"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:id="@+id/civ_icon" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/civ_icon"
        android:layout_toRightOf="@+id/civ_icon"
        android:layout_toEndOf="@+id/civ_icon"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:id="@+id/tv_nickname" />

    <TextView
        android:layout_marginBottom="5dp"
        android:text="@string/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/civ_icon"
        android:layout_alignLeft="@+id/tv_nickname"
        android:layout_alignStart="@+id/tv_nickname"
        android:id="@+id/tv_message" />

    <TextView
        android:clickable="false"
        android:visibility="gone"
        android:text="@string/agree"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp"
        android:id="@+id/tv_agree"
        android:layout_alignBaseline="@+id/tv_message"
        android:layout_alignBottom="@+id/tv_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:clickable="false"
        android:visibility="gone"
        android:textColor="@color/blue"
        android:layout_marginRight="50dp"
        android:text="@string/refuse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_refuse"
        android:layout_marginEnd="50dp"
        android:layout_alignBaseline="@+id/tv_message"
        android:layout_alignBottom="@+id/tv_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:clickable="false"
        android:visibility="gone"
        android:layout_marginRight="90dp"
        android:textColor="@color/blue"
        android:text="@string/ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_ignore"
        android:layout_alignBaseline="@+id/tv_message"
        android:layout_alignBottom="@+id/tv_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="90dp" />


</RelativeLayout>