<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_vote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.min.smalltalk.activity.AddVoteActivity">

    <include layout="@layout/layout_title_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.min.mylibrary.widget.ClearWriteEditText
                android:id="@+id/et_vote_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:drawablePadding="5dip"
                android:hint="@string/vote_title"
                android:inputType="text"
                android:maxLines="6"
                android:minLines="3"
                android:paddingLeft="10dip"
                android:paddingRight="10dip" />

            <!--内容-->
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/enter" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">
                    <com.min.mylibrary.widget.ClearWriteEditText
                        android:id="@+id/et_vote_content_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:ems="11"
                        android:inputType="text"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/enter" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">
                    <com.min.mylibrary.widget.ClearWriteEditText
                        android:id="@+id/et_vote_content_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:ems="11"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_vote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/ll_add_new"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_add_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/add_new" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5">
                    <com.min.mylibrary.widget.ClearWriteEditText
                        android:id="@+id/et_add_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:ems="11"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/multiselect"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.min.smalltalk.wedget.SwitchButton
                    android:id="@+id/sw_vote_multiselect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@mipmap/ios_thumb"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--投票期限-->
            <LinearLayout
                android:id="@+id/ll_vote_period"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/voting_period"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_vote_period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="1"
                    android:drawableRight="@mipmap/rp_arrow"
                    android:textColor="#999"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_create_vote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rs_select_btn_red"
                android:text="@string/create"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
